--- a/src/lib-scss/theme.scss
+++ b/src/lib-scss/theme.scss
@@ -21,6 +21,7 @@
 @import "components/breadcrumb.component";
 @import "components/card.component";
 @import "components/calander.component";
+@import "components/gant-calander.component";
 @import "components/input.component";
 @import "components/radio.input";
 @import "components/list.component";
