--- a/src/lib-scss/theme.scss
+++ b/src/lib-scss/theme.scss
@@ -38,6 +38,7 @@
 @import "components/divider.component";
 @import "components/modal.component";
 @import "components/expansion-pannel.component";
+@import "components/paginator.component";
 
 
 //Layouts
