--- a/src/lib-scss/layouts/_table.layout.scss
+++ b/src/lib-scss/layouts/_table.layout.scss
@@ -7,6 +7,33 @@ $table-cell-min-width: 20rem;
   width: max-content;
   min-width: 100%;
   background-color: var(--mono---white);
+  .cdk-row, .cdk-header-row, .cdk-footer-row {
+    display: flex;
+  }
+  .cdk-header-cell{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: var(--space--smd) var(--space--mlg);
+    background: var(--gray---gray-50);
+    text-align: left;
+    text-transform: uppercase;
+    border: none;
+    font: var(--desktop---x-samll-medium);
+    color: var(--gray---gray-500);
+    flex: 1;
+  }
+  .cdk-cell, .cdk-footer-cell {
+    text-align: left;
+    padding: var(--space--md) var(--space--mlg);
+    background: var(--mono---white);
+    font: var(--desktop---base-regular);
+    color: var(--gray---gray-800--p);
+    border-bottom: 1px solid var(--gray---gray-200);
+    border-collapse: collapse;
+    vertical-align: top;
+    flex: 1;
+  }
   &__container{
     border: 1px solid var(--gray---gray-200);
     background-color: var(--mono---white);
@@ -105,6 +132,8 @@ $table-cell-min-width: 20rem;
     border-bottom: 1px solid var(--gray---gray-200);
     text-transform: uppercase;
     border-collapse: collapse;
+    position: sticky;
+    top: 0;
   }
   &__cell, td{
     text-align: left;
@@ -115,6 +144,25 @@ $table-cell-min-width: 20rem;
     border-bottom: 1px solid var(--gray---gray-200);
     border-collapse: collapse;
     vertical-align: top;
+    &--editable{
+      padding: 0 0 !important;
+    }
+    input{
+      padding: var(--space--smd) var(--space--mlg);
+      border: none;
+      box-sizing: border-box;
+      width: 100%;
+      border-bottom:2px solid transparent ;
+      //height: 58px;
+      &:hover{
+        background-color: var(--gray---gray-100);
+        border-bottom:2px solid var(--gray---gray-200) ;
+      }
+      &:focus{
+        background-color: var(--gray---gray-100);
+        border-bottom:2px solid var(--brand----primary---cobalt-600--p) ;
+      }
+    }
   }
   &__checkbox-cell{
     box-sizing: border-box;
@@ -161,3 +209,4 @@ $table-cell-min-width: 20rem;
     flex-grow: 1;
   }
 }
+
